Check NaN status of progress bar and adding min height to prevent bloc jump in the list of presents

--- a/anna.scss
+++ b/anna.scss
@@ -60,6 +60,7 @@ body {
 			border-radius: 3px;
 			background: #fff;
 			overflow:hidden;
+			min-height: 386px;
 			height: auto;
 
 			img {	
